class Price {
  final int id;
  final int value;
  final DateTime reportDate;

  const Price({
    this.id = 0,
    required this.value,
    required this.reportDate,
  });
}
