@startuml flexeat-uml
skinparam linetype ortho

package state {
    class DishState {
        +editing: bool
        +ingredients: List<FilledIngredient>
    }

    class FilledIngredient {
        +articleName: String
        +weight: int
        +productName: String
        +packagingWeight: int
        +nutritionFacts: NutritionFacts
        +cost: int
    }

    class ListedProduct {
        +productName: String
        +packagingWeight: int
        +nutritionFacts: NutritionFacts
    }

    DishState --* FilledIngredient
}

package presentation {
    class DishesListCubit {
        +state: List<Dish>
    }

    class DishCubit {
        +state: DishState
    }

    class ProductsListCubit {
        +state: List<ListedProduct>
    }

    class ProductCubit {
        +state: ProductState
        +save(): void
        +setName(name: String): void
        +addPackaging(label: String, weight: int): void
    }

    class PriceCubit {
        +reportPrice(price: int, storeName: String): void
    }
    
    DishCubit --o DishState
    ProductsListCubit --o ListedProduct
    ProductCubit --o ProductState
}

package domain {
    entity NutritionFacts {
        +calories: int
        +proteinsPercent: int
    }
    
    entity Dish {
        +name: String
    }

    entity Product {
        +id: int
        +name: String
        +nutritionFacts: NutritionFacts?
        +packagings: List<Packaging>
        +supplies: List<String>
    }

    entity Packaging {
        +id: int
        +label: String
        +weight: int
    }

    entity Price {
        +id: int
        +value: int
        +reportDate: DateTime
        +store: String
    }

    interface ProductRepository {
        +create(product: Product): Future<Product>
        +update(product: Product): Future<void>
        +findById(): Future<Product>
    }

    interface PriceRepository {
        +getLastPriceByPackagingId(packagingId: int): Future<Price>
    }

    ProductRepository -- Product
    Product --* Packaging
    Product --o NutritionFacts
    PriceRepository -- Price
}

ProductState --* Product
DishesListCubit --o Dish
ProductState --o NutritionFacts
ProductCubit --* ProductRepository
PriceCubit --* PriceRepository
@enduml